<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">weechat</string>
    <string name="sendButton">Send</string>
    <string name="app_version">Weechat v0.08-dev</string>
    <string name="loading_please_wait">"Retrieving lines from buffer.\nPlease wait."</string>

    <string name="menu_wee">WeeMenu</string>
    <string name="menu_connection_state">connection state</string>
    <string name="wee_submenu">Weechat Android Submenu</string>
    <string name="preferences">Settings</string>
    <string name="close">Close</string>
    <string name="about">About</string>
    <string name="quit">Quit</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="hotlist">Hotlist</string>
    <string name="nicklist_menu">Nicks</string>
    <string name="tabkey">⇥</string>
    
    <!--  ACRA(Application Crash Reports for Android) related strings -->
    <string name="pref_debug_screen">Crash Reporting</string>
    <string name="pref_disable_acra">Disable crash reporting</string>
    <string name="pref_acra_enabled">Crash reporting currently enabled</string>
    <string name="pref_acra_disabled">Crash reporting currently disabled</string>
    
    <string name="pref_acra_user_email">Email for crash reports</string>
    <string name="pref_acra_user_email_summary">Included in crash reports so the developer
        can contact regarding the crash.</string>
    
    <string name="pref_acra_alwaysaccept">Send automatically</string>
    <string name="pref_acra_alwaysaccept_enabled">Crash reports will be sent automatically</string>
    <string name="pref_acra_alwaysaccept_disabled">A dialog will prompt you to send each crash report</string>
    
    <string name="crash_notif_ticker_text">Unexpected error, please send a report…</string>
	<string name="crash_notif_title">Weechat has crashed…</string>
	<string name="crash_notif_text">Please click here to help fix the issue.</string>
	<string name="crash_dialog_text">Sorry, but weechat-android appears to have crashed.  If you would like
	    to assist in having this issue resolved, please click Ok to send details about the crash to the developer.
	    Note: Usernames/passwords will not be sent.</string>
    <string name="crash_dialog_comment_prompt">Any additional comments(or your email if you\'d like a reply):</string>
</resources>